--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "github-markdown-preview",
-  "version": "0.0.1",
+  "private": true,
+  "version": "0.0.2",
   "displayName": "Github Markdown Preview",
   "description": "Changes VS Code's built-in markdown preview to match Github",
   "keywords": [
