--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "github-markdown-preview",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.2.0",
   "displayName": "GitHub Markdown Preview",
   "description": "Changes VS Code's built-in markdown preview to match GitHub",
   "keywords": [
@@ -31,6 +31,7 @@
     "bierner.markdown-preview-github-styles",
     "bierner.markdown-emoji",
     "bierner.markdown-checkbox",
-    "bierner.markdown-yaml-preamble"
+    "bierner.markdown-yaml-preamble",
+    "bierner.markdown-footnotes"
   ]
 }
