Add the mermaid extension
https://github.blog/2022-02-14-include-diagrams-markdown-files-mermaid/
They have added mermaid support to GitHub so I figured this makes sense to include in the pack 😃

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "github-markdown-preview",
   "private": true,
-  "version": "0.2.0",
+  "version": "0.3.0",
   "displayName": "GitHub Markdown Preview",
   "description": "Changes VS Code's built-in markdown preview to match GitHub",
   "keywords": [
@@ -32,6 +32,7 @@
     "bierner.markdown-emoji",
     "bierner.markdown-checkbox",
     "bierner.markdown-yaml-preamble",
-    "bierner.markdown-footnotes"
+    "bierner.markdown-footnotes",
+    "bierner.markdown-mermaid"
   ]
 }
